--- a/heavycenter/src/main/res/layout/frag_main_weigts.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts.xml
@@ -58,7 +58,7 @@
 
 
 
-        <android.support.v4.view.ViewPager
+        <com.android.lib.view.viewpager.MyViewPager
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top"
